<resources>
    <string name="app_name">Projet ESGI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="search">Recherche</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="profil">Profil</string>
    <string name="favoris">Favoris</string>
    <string name="my_favorites">Mes favoris</string>
    <string name="connexion">Connexion</string>
    <string name="to_connect">Se connecter</string>
    <string name="nom">Nom :</string>
    <string name="textview">TextView</string>
    <string name="identifier">Identifier :</string>
    <string name="langue">Langue :</string>
    <string name="rechercher">Rechercher</string>
    <string name="chargement_en_cours">chargement en cours</string>
    <string name="status">Statut</string>
    <string name="premiere_diffusion">Première diffusion</string>
    <string name="r_seau">Réseau</string>
    <string name="duree">Durée</string>
    <string name="genre">Genre(s)</string>
    <string name="synopsis">Synopsis</string>
    <string name="moyenne">Moyenne :</string>
    <string name="nombres_de_notes">Nombres de notes :</string>
    <string name="main_menu">Menu principal</string>
    <string name="last_updated">Dernières séries récemment mises à jour</string>
    <string name="affichage">Affichage :</string>
    <string name="add_favorite">Ajouter favori</string>
    <string name="remove_favorite">Retirer favori</string>
    <string name="share">Partager</string>
</resources>
