<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/nomSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/textView12"
        android:text="TextView" />

    <ImageView
        android:id="@+id/imageSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/nomSerie"
        android:layout_marginEnd="20dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/nom" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView12"
        android:layout_alignParentStart="true"
        android:text="@string/status" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageSerie"
        android:layout_alignParentStart="true"
        android:text="@string/premiere_diffusion" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:text="@string/r_seau" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView13"
        android:text="@string/duree" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView14"
        android:text="@string/genre" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="25dp"
        android:text="@string/synopsis" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/genreSerie"
        android:layout_alignBottom="@+id/genreSerie"
        android:layout_alignStart="@+id/textView19"
        android:text="@string/moyenne" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_toStartOf="@+id/avgSerie"
        android:text="@string/nombres_de_notes" />

    <TextView
        android:id="@+id/statusSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nomSerie"
        android:layout_alignTop="@+id/textView11"
        android:text="TextView" />

    <TextView
        android:id="@+id/firstAiredSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/statusSerie"
        android:layout_alignTop="@+id/textView12"
        android:text="TextView" />

    <TextView
        android:id="@+id/networkSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/firstAiredSerie"
        android:layout_below="@+id/firstAiredSerie"
        android:text="TextView" />

    <TextView
        android:id="@+id/runtimeSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/networkSerie"
        android:layout_below="@+id/networkSerie"
        android:text="TextView" />

    <TextView
        android:id="@+id/genreSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView23"
        android:layout_below="@+id/textView23"
        android:text="TextView" />

    <TextView
        android:id="@+id/overviewSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="12dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/avgSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView19"
        android:layout_alignParentEnd="true"
        android:text="TextView" />

    <TextView
        android:id="@+id/countNotesSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avgSerie"
        android:layout_toEndOf="@+id/textView19"
        android:text="TextView" />

    <ListView
        android:id="@+id/episodesList"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/overviewSerie"
        android:layout_marginTop="89dp" />

    <ListView
        android:id="@+id/actorsList"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/episodesList"
        android:layout_alignTop="@+id/episodesList"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/addFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/removeFavorite"
        android:layout_alignEnd="@+id/imageSerie"
        android:text="@string/add_favorite" />

    <Button
        android:id="@+id/removeFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/addFavorite"
        android:layout_centerVertical="true"
        android:text="@string/remove_favorite" />

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageSerie"
        android:layout_below="@+id/runtimeSerie"
        android:text="@string/share" />
</RelativeLayout>